--- a/Chat_Demo/package.json
+++ b/Chat_Demo/package.json
@@ -17,7 +17,10 @@
     "bootstrap": "^5.3.5",
     "comlink": "^4.4.2",
     "monaco-editor": "^0.52.2",
-    "pyodide-worker-runner": "^1.4.0"
+    "pyodide-worker-runner": "^1.4.0",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/extension-autocomplete": "^6.2.1",
+    "codemirror": "^6.2.1"
   },
   "devDependencies": {
     "vite": "^6.0.11"
